# miden-qash-contract

./: .gitignore  Cargo.toml  README.md
masm/accounts/: counter.masm  evm.masm  multisig.masm  spending_limit.masm  whitelisting.masm
masm/auth/: no_auth.masm
masm/notes/: gift.masm  gift_recallable.masm  increment_note.masm  sha256.masm  spending_limit_note.masm  zoro_swap.masm
masm/scripts/: add_signer.masm  change_threshold.masm  nop_script.masm  remove_signer.masm  set_spending_script.masm  spending_limit_script.masm  update_spending_script.masm  verify_ecdsa.masm
scripts/: setup_node.sh  start_node.sh
src/: common.rs  constants.rs  lib.rs  main.rs  multisig_client.rs
src/spending_limit/: mod.rs  spending_limit_contract_deploy.rs
tests/: add_signer_test.rs  change_threshold_test.rs  deploy_modular_account.rs  deploy_multisig_test.rs  gift_test.rs  increment_count_test.rs  multisig_signature_verification.rs  remove_signer_test.rs  set_spending_limit_test.rs  sha256_test.rs  verify_ecdsa_test.rs
tests/weighted_multisigs/: add_signer_test.rs  change_threshold_test.rs  remove_signer_test.rs
