[package]
name = "masm-project-template"
version = "0.1.0"
edition = "2024"
default-run = "masm-project-template"

[dependencies]
miden-client = { version = "=0.10", features = ["testing", "tonic", "sqlite"] }
miden-lib = { version = "=0.10.0", default-features = false }
miden-objects = { version = "=0.10.0", default-features = false }
miden-crypto = { version = "0.15.6" }
miden-assembly = "=0.15.0"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "fs",
] }
rand_chacha = "0.9.0"
